<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/endlessconstellation">


    <VideoView
        android:id="@+id/animation_view"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="200dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text1"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/scan_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:textSize="19sp"
        android:background="#4CAF50"
        android:textColor="#020202"
        android:layout_marginBottom="150dp" />




    <TextView
        android:id="@+id/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text2"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:layout_marginTop="16dp" />

</LinearLayout>


